changed color of fonts for each breakpoint

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Skillcrush Testing</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
-
+<h1>There is no text on this site at the moment</h1>
+    <h2>So I'm adding a little bit</h2>
+    <p>Now it's done so I can tell Lovely Client that they can come and take a look at thier magnificent creation.</p>
   <body>
   </body>
 </html>
